# SpaceShips

./: Build.sh  CMakeLists.txt  Run.sh  TestsRun.sh  main.cpp  testRunner.cpp
Core/GameLogic/: CMakeLists.txt  ControlAction.hpp  Controllable.cpp  Controllable.hpp  Entity.cpp  Entity.hpp  GameConfig.hpp  Vector2t.hpp
Source/: Bullet.cpp  Button.cpp  Controllable.cpp  EnemiesManager.cpp  SelfSteering.cpp  Spaceship.cpp  Sprite.cpp
Source/Headers/: Bullet.hpp  Button.hpp  Controllable.hpp  EnemiesManager.hpp  Menu.hpp  Moveable.hpp  SelfSteering.hpp  Spaceship.hpp  Sprite.hpp
